--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -634,6 +634,14 @@ main {
   padding: 0 2%;
 }
 
+.description_maintenance h3 {
+  margin-top: 25px;
+  margin-bottom: 5px;
+  font-weight: 600;
+  font-size: clamp(22px, 5vw, 24px) !important;
+  text-shadow: var(--text-shadown-b-h3);
+}
+
 .description_maintenance b {
   text-shadow: var(--text-shadown-b-h3);
 }
