--- a/src/pages/price-list/commercial-slushie-machine-repair-cost.astro
+++ b/src/pages/price-list/commercial-slushie-machine-repair-cost.astro
@@ -47,7 +47,7 @@ import "css/price/style_price.css";
             width="500px"
             height="500px"
             src="/commercial-slushie-machine/commercial-slushie-machine-1.webp"
-            alt="Commercial dryer repair cost"
+            alt="Commercial slushie machine repair cost"
           />
 
           <Contactbtn />
@@ -112,7 +112,7 @@ import "css/price/style_price.css";
                 width="500px"
                 height="500px"
                 src="/commercial-slushie-machine/commercial-slushie-machine-2.webp"
-                alt="Commercial dryer repair cost near me"
+                alt="Commercial slushie machine repair cost near me"
               />
             </div>
           </div>
@@ -346,7 +346,7 @@ import "css/price/style_price.css";
               width="600px"
               height="500px"
               src="/commercial-slushie-machine/commercial-slushie-machine-3.webp"
-              alt="Commercial dryer repair cost Los Angeles"
+              alt="Commercial slushie machine repair cost Los Angeles"
             />
           </div>
 
@@ -476,7 +476,7 @@ import "css/price/style_price.css";
               width="500px"
               height="500px"
               src="/commercial-slushie-machine/commercial-slushie-machine-4.webp"
-              alt="Whirlpool commercial dryer repair cost"
+              alt="Used commercial slushie machine repair cost"
             />
           </div>
         </div>
@@ -631,7 +631,7 @@ import "css/price/style_price.css";
               width="600px"
               height="500px"
               src="/commercial-slushie-machine/commercial-slushie-machine-5.webp"
-              alt="Commercial dryer repair cost near Los Angeles, CA"
+              alt="Commercial slushie machine repair cost estimator"
             />
           </div>
 
@@ -814,7 +814,7 @@ import "css/price/style_price.css";
             width="600px"
             height="800px"
             src="/commercial-slushie-machine/commercial-slushie-machine-6.webp"
-            alt="Best commercial dryer repair cost near los angeles ca"
+            alt="Commercial slushie machine parts cost"
           />
         </div>
 
