--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -160,6 +160,26 @@ const menuitems = [
         title: "Commercial Dryer Repair Cost",
         path: "/price-list/commercial-dryer-repair-cost",
       },
+      {
+        title: "Commercial Slushie Machine Repair Cost",
+        path: "/price-list/commercial-slushie-machine-repair-cost",
+      },
+      {
+        title: "Commercial Walk-in Freezer Repair Cost",
+        path: "/price-list/commercial-walk-in-freezer-repair-cost",
+      },
+      {
+        title: "Commercial Walk-in Cooler Repair Cost",
+        path: "/price-list/commercial-walk-in-cooler-repair-cost",
+      },
+      {
+        title: "Commercial Oven Repair Cost",
+        path: "/price-list/commercial-oven-repair-cost",
+      },
+      {
+        title: "Commercial Stove Repair Cost",
+        path: "/price-list/commercial-stove-repair-cost",
+      },
     ],
   },
 ];
