--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -9,6 +9,19 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+    height: 8px;
+    background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ca0913;
+    border-radius: 5px;
+}
+
+
+
 html {
     width: 100%;
     scroll-behavior: auto;
@@ -91,6 +104,9 @@ body {
 .lg\:bg-white {
     background-color: rgb(0 0 0);
     white-space: nowrap;
+    max-height: calc(100vh - 180px);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .w-3 {
