--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -12,9 +12,10 @@ import "@components/css-components/footer-cta.css";
 <div class="thumbtack-profile">
   <h2>
     Real Customer Reviews From Our Google and <a
-    href="https://www.thumbtack.com/ca/los-angeles/dishwasher-installation/same-day-appliance-repair/service/474673684619198464"
-    title="Thumbtack Reviews"
-    target="_blank"> Thumbtack Profile</a
+      href="https://www.thumbtack.com/ca/los-angeles/dishwasher-installation/same-day-appliance-repair/service/474673684619198464"
+      title="Thumbtack Reviews"
+      target="_blank">
+      Thumbtack Profile</a
     >
   </h2>
 </div>
@@ -132,4 +133,58 @@ import "@components/css-components/footer-cta.css";
       </div>
     </div>
   </div>
+
+  <!-- куки -->
+  <div class="cookie-full">
+    <div id="cookie_note" class="cookie-note--Timeout">
+      <p>
+        We use cookies to improve our website. By staying on our website, you
+        agree to the terms and conditions of cookies. To read our Privacy and
+        Cookie Policy, please read the following <a
+          href="privacy.php"
+          target="_blank">click here</a>
+      </p>
+      <button class="cookie_accept">I agree</button>
+    </div>
+  </div>
+
+  <!-- скрипт куки -->
+  <script defer>
+    function setCookie(name, value, days) {
+      let expires = "";
+      if (days) {
+        let date = new Date();
+        date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
+        expires = "; expires=" + date.toUTCString();
+      }
+      document.cookie = name + "=" + (value || "") + expires + "; path=/";
+    }
+
+    function getCookie(name) {
+      let matches = document.cookie.match(
+        new RegExp(
+          "(?:^|; )" +
+            name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, "\\$1") +
+            "=([^;]*)",
+        ),
+      );
+      return matches ? decodeURIComponent(matches[1]) : undefined;
+    }
+
+    function checkCookies() {
+      let cookieNote = document.getElementById("cookie_note");
+      let cookieBtnAccept = cookieNote.querySelector(".cookie_accept");
+
+      if (!getCookie("cookies_policy")) {
+        cookieNote.classList.add("show");
+      }
+
+      cookieBtnAccept.addEventListener("click", function () {
+        setCookie("cookies_policy", "true", 365);
+        cookieNote.classList.remove("show");
+      });
+    }
+
+    checkCookies();
+  </script>
 </footer>
