--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -6,8 +6,8 @@ import "@components/css-components/footer-cta.css";
 ---
 
 <!--Reviews -->
-<div id="reviews"><br /><br /><br /></div><br /><br /><br /><br /><br />
-<Btn />
+<div id="reviews"><br /><br /><br />
+</div><br /><br /><br /><br /><br />
 
 <div class="thumbtack-profile">
   <h2>
@@ -41,8 +41,8 @@ import "@components/css-components/footer-cta.css";
     >Expert Appliance Repair Services Across All LA Locations</span
   >
 </h2>
-
 <div class="feedback">
+  <Btn />
   <p>
     Our skilled expert appliance repair technicians have extensive experience in
     servicing and maintaining appliances from leading brands across various
